Fixed some issues
Fixed an overflowing element and changed css to scss for consistency.

--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -21,5 +21,5 @@
 .redSection {
   background-color: var(--default-red);
   height: 1vh;
-  width: 1300px;
+  width: 100%;
 }
